<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voicevox_core_vendor</name>
  <version>1.2.0</version>
  <description>voicevox_core_vendor</description>
  <maintainer email="iwai.rin.ij@tut.jp">Rin Iwai</maintainer>
  <license>Apache License 2.0</license>
  <license>MIT</license>  <!-- voicevox_core -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>curl</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
